--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -47,15 +47,18 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Elige tus categorías favoritas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJy-sY-IXv">
-                                            <rect key="frame" x="89" y="10" width="239" height="22"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Elige tus categorías favoritas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJy-sY-IXv">
+                                            <rect key="frame" x="88" y="9" width="239" height="22"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                             <color key="textColor" red="0.24698823689999999" green="0.31893250350000002" blue="0.71358287330000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstItem="KJy-sY-IXv" firstAttribute="centerY" secondItem="WoO-70-3xw" secondAttribute="centerY" id="NNE-C8-0rW"/>
+                                        <constraint firstItem="KJy-sY-IXv" firstAttribute="centerX" secondItem="WoO-70-3xw" secondAttribute="centerX" id="xl1-VA-E5J"/>
+                                    </constraints>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="filterCell" rowHeight="47" id="GzW-pY-VCE" customClass="FilterTableViewCell" customModule="you_say_" customModuleProvider="target">
@@ -463,7 +466,7 @@
                                 <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="FGW-ol-sai" firstAttribute="leading" secondItem="4Or-MM-caF" secondAttribute="leading" id="2GA-Xh-6Ue"/>
                             <constraint firstItem="rAv-jH-PLa" firstAttribute="leading" secondItem="c9E-IV-wTP" secondAttribute="leading" id="9zQ-qh-NrA"/>
@@ -636,7 +639,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JSn-8l-qO6">
-                                <rect key="frame" x="0.0" y="384" width="414" height="418"/>
+                                <rect key="frame" x="0.0" y="376" width="414" height="426"/>
                                 <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="separatorColor" red="0.91372549020000005" green="0.92156862750000001" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -738,15 +741,15 @@
                         <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="R6J-Q9-UMz" firstAttribute="bottom" secondItem="3wb-7M-Mc3" secondAttribute="bottom" id="1mA-AI-eOk"/>
-                            <constraint firstItem="JSn-8l-qO6" firstAttribute="top" secondItem="WX7-q3-liT" secondAttribute="bottom" constant="8" id="23Q-Sy-PVX"/>
+                            <constraint firstItem="JSn-8l-qO6" firstAttribute="top" secondItem="WX7-q3-liT" secondAttribute="bottom" id="23Q-Sy-PVX"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="top" secondItem="NKP-5U-Ef3" secondAttribute="bottom" id="5rp-q0-dh5"/>
                             <constraint firstItem="JSn-8l-qO6" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="6jd-Ta-dEx"/>
                             <constraint firstItem="AUN-eI-7Pu" firstAttribute="leading" secondItem="sQy-On-QSW" secondAttribute="leading" id="9v8-82-1tj"/>
                             <constraint firstItem="WX7-q3-liT" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="AWJ-IA-kUB"/>
                             <constraint firstItem="R6J-Q9-UMz" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="ESL-l6-pcx"/>
+                            <constraint firstItem="Z6X-PP-Zc1" firstAttribute="top" secondItem="EJB-rf-Mcc" secondAttribute="bottom" constant="101" id="Ieo-So-zGU"/>
                             <constraint firstAttribute="bottom" secondItem="AUN-eI-7Pu" secondAttribute="bottom" id="Jpa-Bz-1Bq"/>
                             <constraint firstItem="JSn-8l-qO6" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="MVI-Y3-eWU"/>
-                            <constraint firstItem="Z6X-PP-Zc1" firstAttribute="top" secondItem="WX7-q3-liT" secondAttribute="bottom" constant="93" id="NMp-q1-OLX"/>
                             <constraint firstItem="AUN-eI-7Pu" firstAttribute="top" secondItem="R6J-Q9-UMz" secondAttribute="bottom" id="Pwd-oC-Tcj"/>
                             <constraint firstItem="NKP-5U-Ef3" firstAttribute="top" secondItem="sQy-On-QSW" secondAttribute="top" id="QOP-ck-XJ3"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="QbP-Fj-eiT"/>
@@ -790,6 +793,6 @@
         <image name="report" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="CGk-s2-06D"/>
+        <segue reference="f7j-ge-b0e"/>
     </inferredMetricsTieBreakers>
 </document>
